--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 .canvas {
+  position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -120,4 +122,24 @@
   height: 5px;
   background-color: black;
   border-radius: 5px;
+}
+
+.info {
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  font-family: 'Rubik', sans-serif;
+  color: #777;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap : 12px;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
